[package]
name = "quincy"
version = "0.10.3"
authors = ["Jakub Kubík <jakub.kubik.it@protonmail.com>"]
license = "MIT"
description = "QUIC-based VPN"
readme = "README.md"
homepage = "https://github.com/M0dEx/quincy"
repository = "https://github.com/M0dEx/quincy"
keywords = ["vpn", "quic", "tunnel", "networking", "tokio"]
categories = ["command-line-utilities", "network-programming"]
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "quincy-client"
path = "src/bin/client.rs"

[[bin]]
name = "quincy-server"
path = "src/bin/server.rs"

[[bin]]
name = "quincy-users"
path = "src/bin/users.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
jemalloc = ["dep:jemallocator"]

[dependencies]
# Quinn
quinn = "^0.11.1"

# Interfaces and networking
tun2 = { version = "^3.1.0", features = ["async"] }
socket2 = "^0.5.2"
bytes = "^1.4"
etherparse = "^0.15.0"
ipnet = "^2.7"
libc = "^0.2.147"

# Tokio
tokio = { version = "^1.25", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "signal",
] }
dashmap = "^6"
futures = "^0.3.17"
async-trait = "^0.1.77"

# Configuration
figment = { version = "^0.10.8", features = ["toml", "env"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# TLS
rustls = { version =  "^0.23.0", default-features = false, features = ["ring"] }
rustls-pemfile = "^2.0"

# Authentication
argon2 = "^0.5.0"
rpassword = "^7.2"

# Tracing/Logging
tracing = { version = "^0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "^0.3.17", features = ["env-filter", "ansi"] }
nu-ansi-term = "^0.50.0"

# Utils
time = "^0.3.23"
anyhow = "^1.0"
clap = { version = "^4.1", features = ["derive"] }
once_cell = "^1.17"

# Alloc
[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
rstest = "^0.21.0"
tracing-test = { version = "^0.2.4", features = ["no-env-filter"] }
