[package]
name = "quincy"
version = "0.15.0"
authors = ["Jakub Kubík <jakub.kubik.it@protonmail.com>"]
license = "MIT"
description = "QUIC-based VPN"
readme = "README.md"
homepage = "https://github.com/M0dEx/quincy"
repository = "https://github.com/M0dEx/quincy"
keywords = ["vpn", "quic", "tunnel", "networking", "tokio"]
categories = ["command-line-utilities", "network-programming"]
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "quincy-client"
path = "src/bin/client.rs"

[[bin]]
name = "quincy-server"
path = "src/bin/server.rs"

[[bin]]
name = "quincy-users"
path = "src/bin/users.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["offload"]

offload = []
jemalloc = ["jemallocator"]

[dependencies]
# Quinn
quinn = { version = "^0.11.6", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-aws-lc-rs"] }

# Interfaces and networking
tun-rs = { version = "=2.1.0", features = ["async_tokio"] }  # pinned audited version
socket2 = "^0.5.2"
bytes = "^1.4"
ipnet = { version = "^2.7", features = ["serde"] }

# Tokio
tokio = { version = "^1.44.2", features = ["rt-multi-thread", "macros", "sync", "io-util", "signal"] }
dashmap = "^6"
futures = "^0.3.17"
async-trait = "^0.1.77"

# Configuration
figment = { version = "^0.10.8", features = ["toml", "env"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# TLS
rustls = { version = "^0.23.18", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "^2.0"

# Authentication
argon2 = "^0.5.0"
rpassword = "^7.2"
rand_core = { version = "^0.6.4", features = ["getrandom"] }

# Tracing/Logging
tracing = { version = "^0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "^0.3.17", features = ["env-filter", "ansi"] }
nu-ansi-term = "^0.50.0"

# Utils
anyhow = "^1.0"
clap = { version = "^4.1", features = ["derive"] }

# Alloc
[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.5", optional = true }

# WinTun
[target.'cfg(windows)'.dependencies]
wintun-bindings = { version = "0.7.31", features = ["verify_binary_signature"] }

[dev-dependencies]
rstest = "^0.25.0"
etherparse = "^0.18.0"
tracing-test = { version = "^0.2.4", features = ["no-env-filter"] }
